--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="src/style/style.css">
     <script src="https://code.iconify.design/2/2.2.0/iconify.min.js"></script>
+    <title>Random number generator</title>
 </head>
 <body>
     
