--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div class="box__item">
                     <input type="number" id="first">
                     <input type="number" id="second">
-                    <h4 id="generator">Generuj numer</h4>
+                    <h4 id="generator">Generuj</h4>
                     <p>Liczba: <span id="result"></span></p>
                 </div>
             </div>
