--- a/index.html
+++ b/index.html
@@ -7,21 +7,20 @@
     <title>Random number generator</title>
     <link rel="stylesheet" href="src/style/style.css">
     <script src="https://code.iconify.design/2/2.2.0/iconify.min.js"></script>
-    <link rel="shortcut icon" href="src/style/assets/logo.png">
 </head>
 <body>
     
     <div class="wrapper">
         <div class="box">
             <div class="header">
-                <h1>Random number generator</h1>
+                <p>Random number generator</p>
             </div>
             <div class="box__wrapper">
                 <div class="box__item">
                     <input type="number" id="first">
                     <input type="number" id="second">
-                    <h4 id="generator">Generuj</h4>
-                    <p>Liczba: <span id="result"></span></p>
+                    <p id="generator">Generuj</p>
+                    <p id="number">Liczba: <span id="result"></span></p>
                 </div>
             </div>
         </div>
