--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Random number generator</title>
     <link rel="stylesheet" href="src/style/style.css">
     <script src="https://code.iconify.design/2/2.2.0/iconify.min.js"></script>
-    <link rel="shortcut icon" href="src/style/assets/logo.png">
 </head>
 <body>
     
@@ -22,6 +21,13 @@
                     <input type="number" id="second">
                     <p id="generator">Generuj</p>
                     <p id="number">Liczba: <span id="result"></span></p>
+                </div>
+                <div class="box__item2">
+                    <div class="box__itemik" id="box__itemik1">
+                        <span class="iconify" data-icon="fa6-solid:g" data-width="100" data-height="114.29"></span>
+                        <p id="domain">grubyisking.pl</p>
+                        
+                    </div>
                 </div>
             </div>
         </div>
